<resources>
    <string name="app_name">Домашняя библиотека</string>
    <string name="limit_text">20</string>
    <string name="btn_search_text">Искать!</string>
    <string name="btn_reload_works_text">Обновить произв.</string>
    <string name="btn_reload_text">Обновить книги</string>
    <string name="btn_search_tooltip">Запустить поиск</string>
    <string name="add_record">Добавить книгу</string>
    <string name="context_menu_details">Посмотреть подробности</string>
    <string name="context_menu_search">Найти подробности</string>
    <string name="label_author">Автор</string>
    <string name="label_name">Название</string>
    <string name="label_limit">Макс. записей</string>
    <string name="url_get_info_json">http://www.homelibr.ru/andr/json/</string>
    <string name="url_get_info_work_json">http://www.homelibr.ru/andr/json/?IsWork=1</string>
    <string name="url_get_info">http://www.homelibr.ru/andr/</string>
    <string name="toggle_what">Книги</string>
    <string name="toggle_what1">Произведения</string>
    <string name="label_loading">Получаем данные из сети&#8230;\nЭто может занять какое-то время&#8230;
        \nТак что никуда не уходите&#8230;</string>
    <string name="label_response">Данные получены! Идет загрузка данных&#8230;
        \nЭто может занять несколько минут&#8230;\nПотерпите, пожалуйста&#8230;</string>
    <string name="mnu_update_books">Обновить книги</string>
    <string name="mnu_add_books">Добавить книги</string>
    <string name="mnu_update_works">Обновить произведения</string>
    <string name="mnu_add_works">Добавить произведения</string>
</resources>
