<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/mnuUpdateBooks"
        android:orderInCategory="100"
        android:title="@string/mnu_update_books"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnuAddBooks"
        android:orderInCategory="100"
        android:title="@string/mnu_add_books"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnuUpdateWorks"
        android:orderInCategory="100"
        android:title="@string/mnu_update_works"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnuAddWorks"
        android:orderInCategory="100"
        android:title="@string/mnu_add_works"
        app:showAsAction="never"/>

</menu>